<resources>
    <string name="app_name">FarmTracker</string>
    <string name="greeting_login_text">Entrar</string>
    <string name="greeting_create_acc_text">Criar conta</string>
    <string name="greeting_forgot_pass_text"><u>Esqueci a senha</u></string>
    <string name="greeting_title_text">Bem vindo ao FarmTracker</string>
    <string name="greeting_subtitle_text">A melhor ferramenta para o acompanhamento de suas produções</string>
    <string name="greeting_email_hint_text">Email</string>
    <string name="greeting_pass_hint_text">Senha</string>
    <string name="culture_old_actions">Entradas Antigas</string>
    <string name="culture_new_action">Nova Entrada</string>
    <string name="action_mechanical">Operações mecânicas e manuais</string>
    <string name="action_fertilizer">Fertilização e nutrição</string>
    <string name="action_culture_care">Tratos culturais</string>
    <string name="action_pest">Controle de pragas e doenças</string>
</resources>
