<?xml version="1.0" encoding="utf-8"?>
<layout>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:background="@drawable/background"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:src="@drawable/ic_logo"
        android:adjustViewBounds="true"
        android:scaleType="fitCenter"
        android:id="@+id/imageView"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintVertical_bias="0.13"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="16dp" />


    <TextView
        android:text="@string/greeting_title_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/darkGreen"
        android:textSize="25sp"
        android:id="@+id/textView"
        android:layout_marginTop="16dp"
        app:layout_constraintLeft_toLeftOf="@+id/imageView"
        app:layout_constraintRight_toRightOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/imageView"/>

    <TextView
        android:text="@string/greeting_subtitle_text"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="10dp"
        android:textSize="18sp"
        android:textColor="@color/darkGreen"
        android:id="@+id/textView2"
        app:layout_constraintRight_toRightOf="@+id/textView"
        app:layout_constraintLeft_toLeftOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:inputType="textEmailAddress"
        android:ems="15"
        android:hint="@string/greeting_email_hint_text"
        android:id="@+id/outletEmail"
        app:layout_constraintLeft_toLeftOf="@+id/textView2"
        app:layout_constraintRight_toRightOf="@+id/textView2"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="15"
        android:hint="@string/greeting_pass_hint_text"
        android:id="@+id/outletPassword"
        app:layout_constraintRight_toRightOf="@+id/outletEmail"
        app:layout_constraintLeft_toLeftOf="@+id/outletEmail"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/outletEmail" />

    <Button
        android:text="@string/greeting_login_text"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:background="@color/brown"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textAllCaps="false"
        android:id="@+id/outletLoginBtn"
        app:layout_constraintLeft_toLeftOf="@+id/outletPassword"
        app:layout_constraintRight_toRightOf="@+id/outletPassword"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/outletPassword"
        app:layout_constraintHorizontal_bias="0.0" />

    <Button
        android:text="@string/greeting_create_acc_text"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:background="@color/brown"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textAllCaps="false"
        android:id="@+id/outletCreateAccBtn"
        app:layout_constraintRight_toRightOf="@+id/outletPassword"
        app:layout_constraintLeft_toLeftOf="@+id/outletPassword"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/outletPassword"
        app:layout_constraintHorizontal_bias="1.0" />

    <Button
        android:text="@string/greeting_forgot_pass_text"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:textColor="@color/darkGreen"
        android:textAllCaps="false"
        android:id="@+id/outletForgotPassBtn"
        app:layout_constraintRight_toRightOf="@+id/outletCreateAccBtn"
        app:layout_constraintLeft_toLeftOf="@+id/outletLoginBtn"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/outletLoginBtn" />

</android.support.constraint.ConstraintLayout>
</layout>