<?xml version="1.0" encoding="utf-8"?>
<layout>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/horizontalCenter"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true">
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/verticalCenter"
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true">
    </RelativeLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/outletMechanicalOperations"
        android:background="@color/lightGreen"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_toLeftOf="@id/verticalCenter"
        android:layout_above="@id/horizontalCenter">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_wheelbarrow"

            android:id="@+id/imageView4"
            android:layout_marginEnd="16dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginStart="16dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.4" />

        <TextView
            android:text="@string/action_mechanical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/textMechanical"
            android:gravity="center"
            android:id="@+id/textView12"
            app:layout_constraintTop_toBottomOf="@+id/imageView4"
            app:layout_constraintLeft_toLeftOf="@+id/imageView4"
            app:layout_constraintRight_toRightOf="@+id/imageView4"
            android:layout_marginTop="16dp" />
    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/outletFertilizationAndNutricion"
        android:background="@color/lbYellow"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_toRightOf="@id/verticalCenter"
        android:layout_above="@id/horizontalCenter">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_fertilizer"

            android:id="@+id/imageView5"
            android:layout_marginEnd="16dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginStart="16dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.39" />

        <TextView
            android:text="@string/action_fertilizer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/textFertilizer"
            android:id="@+id/textView14"
            app:layout_constraintRight_toRightOf="@+id/imageView5"
            app:layout_constraintLeft_toLeftOf="@+id/imageView5"
            app:layout_constraintTop_toBottomOf="@+id/imageView5"
            android:layout_marginTop="16dp" />
    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/outleCultureCare"
        android:background="@color/darkRed"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_toLeftOf="@id/verticalCenter"
        android:layout_below="@id/horizontalCenter">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_sprout"

            android:id="@+id/imageView7"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"

            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintVertical_bias="0.4" />

        <TextView
            android:text="@string/action_culture_care"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView15"
            android:textColor="@color/textCultureCare"
            app:layout_constraintRight_toRightOf="@+id/imageView7"
            app:layout_constraintLeft_toLeftOf="@+id/imageView7"
            app:layout_constraintTop_toBottomOf="@+id/imageView7"
            android:layout_marginTop="16dp" />
    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/outletPestControl"
        android:background="@color/lightblue"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_toRightOf="@id/verticalCenter"
        android:layout_below="@id/horizontalCenter">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_bugs"

            android:id="@+id/imageView8"
            android:layout_marginEnd="16dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginStart="16dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.4" />

        <TextView
            android:text="@string/action_pest"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView16"
            android:gravity="center"
            android:textColor="@color/textPest"
            app:layout_constraintRight_toRightOf="@+id/imageView8"
            app:layout_constraintLeft_toLeftOf="@+id/imageView8"
            app:layout_constraintTop_toBottomOf="@+id/imageView8"
            android:layout_marginTop="16dp" />
    </android.support.constraint.ConstraintLayout>
</RelativeLayout>
</layout>